			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Overflow issues in arithmetic left shift (<<).  Ulrigh Neumerkel.

  * FIXED: float_fractional_part function for integers.  See mailinglist.

==================================
VERSION 5.6.25 (December 21, 2006)
==================================

  * FIXED: nth0(nth0(2, [a,b,c|_], x).  Ryszard Szopa.

  * FIXED: length/2: length(-List, +Bignum) and speed of non-determinism
    of length(-,-).  Ulrich Neumerkel.

  * ADDED: library(pairs).  With help from Richard O'Keefe.

  * FIXED: random/1 to handle large integers more elegantly.
    Roberto Bagnara.

  * DELETED: random/3 from library(quintus).  library(random) provides a
    more portable alternative.  Roberto Bagnara.

  * ADDED: Moved library(broadcast) from XPCE libraries to Prolog library.

  * MODIFIED: PL_release_stream() now checks for errors and returns
    FALSE if the stream is in an error state.

  * FIXED: Accept c:\\ as absolute path in Windows (Paulo Moura).

  * ADDED: library(error), providing must_be/2, type_error/2, etc.
    After discussion on mailinglist.

  * FIXED: Bug#239: crash on illegal call to clause/3.  Keri Harris.

  * FIXED: Bug#236: error-handling on illegal setenv calls.  Keri Harris.

  * ADDED: SIO_FLUSHOUTPUT to control-functions to allow flushing compressed
    streams.

  * FIXED: Deal with new definition of variable EMACS after a mail from
    the Emacs developers.  Now EMACS inferior mode is implied if $EMACS
    is defined and non-empty.

==================================
VERSION 5.6.24 (November 28, 2006)
==================================

  * FIXED: dde_request to progman returning nul-characters at the end.
    Windows XP/SP2 returns wrong length for the CF_TEXT result.
