@@ -561,3 +561,4 @@ ATOM("yfx"),
 ATOM("yfy"),
 ATOM("zero_divisor"),
 ATOM("comments"),
+ATOM("priority"),
