@@ -1025,6 +1025,7 @@ static const opt_spec write_term_options[] =
   { ATOM_module,	    OPT_ATOM },
   { ATOM_backquoted_string, OPT_BOOL },
   { ATOM_attributes,	    OPT_ATOM },
+  { ATOM_priority,	    OPT_INT },
   { NULL_ATOM,	     	    0 }
 };
 
@@ -1038,6 +1039,7 @@ pl_write_term3(term_t stream, term_t term, term_t opts)
   bool charescape = -1;			/* not set */
   atom_t mname    = ATOM_user;
   atom_t attr     = ATOM_nil;
+  int  priority   = 1200;
   IOSTREAM *s;
   write_options options;
 
@@ -1046,7 +1048,7 @@ pl_write_term3(term_t stream, term_t term, term_t opts)
   if ( !scan_options(opts, 0, ATOM_write_option, write_term_options,
 		     &quoted, &ignore_ops, &numbervars, &portray,
 		     &charescape, &options.max_depth, &mname,
-		     &bqstring, &attr) )
+		     &bqstring, &attr, &priority) )
     fail;
 
   if ( attr == ATOM_nil )
@@ -1059,7 +1061,12 @@ pl_write_term3(term_t stream, term_t term, term_t opts)
     
     options.flags |= mask;
   }
+  if ( priority < 0 || priority > OP_MAXPRIORITY )
+  { term_t t = PL_new_term_ref();
+    PL_put_integer(t, priority);
 
+    return PL_error(NULL, 0, NULL, ERR_DOMAIN, ATOM_operator_priority, t);
+  }
   if ( !getOutputStream(stream, &s) )
     fail;
   
@@ -1080,10 +1087,10 @@ pl_write_term3(term_t stream, term_t term, term_t opts)
   PutOpenToken(EOF, s);			/* reset this */
   if ( (options.flags & PL_WRT_QUOTED) && !(s->flags&SIO_REPPL) )
   { s->flags |= SIO_REPPL;
-    writeTerm(term, 1200, &options);
+    writeTerm(term, priority, &options);
     s->flags &= ~SIO_REPPL;
   } else
-  { writeTerm(term, 1200, &options);
+  { writeTerm(term, priority, &options);
   }
 
   return streamStatus(s);
